# IGVC2025

./: digest.txt  frames.gv  his.txt
src/ashwini/: CMakeLists.txt  default.rviz  digest.txt  package.xml
src/ashwini/arduino/: arduinocode
src/ashwini/config/: costmap_common.yaml  costmap_common_params.yaml  dwa_planner.yaml  ekf.yaml  global_costmap.yaml  global_costmap_params.yaml  laser_filter.yaml  local_costmap.yaml  local_costmap_params.yaml  rplidar_filter.yaml  trajectory_planner.yaml
src/ashwini/launch/: lane.launch  lane_detection.launch  move_base.launch  obstacle_lane.launch  real.launch  simulation.launch  slam_navigation.launch  suryatest.launch  world.launch
src/ashwini/meshes/: world.dae
src/ashwini/models/cool_model/: model.config  model.sdf
src/ashwini/models/cool_model/materials/scripts/: plain.material
src/ashwini/models/lane_overlay/: model.config  model.sdf
src/ashwini/models/lane_overlay/materials/scripts/: lanetex.material
src/ashwini/rviz/: default.rviz  real.rviz  urdf.rviz
src/ashwini/script/: camera_publisher.py  cmd_mux.py  correct_imu.py  enter_waypoint.py  gps.py  imu.py  lane_costmap_plugin.py  lane_detection.py  lane_follower.py  lidar.py  motor_serial.py  move_around.py  move_smart.py  publish_goal.py  publish_imu.py  teleop.py  test_lane_detection.py  waypoint.py
src/ashwini/urdf/: ashwini.gazebo  ashwini.xacro
src/ashwini/worlds/: empty.world
src/realsense-ros/realsense2_camera/launch/: rs_camera.launch
